Fixes button spacing

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -241,9 +241,9 @@ button {
     background: #3EC9A7;
     font-size: 24px;
     border: 3px solid #2B879E;
-    margin-top: 1vw;
+    margin-top: 1em;
     margin-bottom: 100px; 
-    box-shadow: 5px 5px 25px black
+    box-shadow: 5px 5px 25px black;
 }
 
 footer {
